desperate attempt at fixing weird bug on mobile

--- a/projects/missiles/src/style.css
+++ b/projects/missiles/src/style.css
@@ -228,7 +228,6 @@ footer a img:hover {
     }
 
     #filter {
-        background-image: url('./img/background-3.jpg');
         animation: none;
     }
     
